# cosets

./: .gitignore  README.md  pyproject.toml
cosets/: __init__.py  connection.py  dndata.py  graphs.py  greedy.py  lovasz.py  maxsat.py  mip_model.py  output.py  relax.py  schreier.py
