[tool.poetry]
name = "cosets"
version = "0.1.0"
description = ""
authors = ["Victor S. Miller <victor.miller@sri.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-sat = "^0.1.8.dev7"
sympy = "^1.12"
networkx = "^3.1"
numpy = "^1.25.0"
pynauty = "^2.8.6"
lazytree = "^0.3.3"
cvxpy = "^1.3.2"
cvxopt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
